--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="forget_description"> <font color="#800080"> Forget Password? </font></string>
     <string name="fragment_a_text">FragmentA!!!</string>
     <string name="fragment_b_text">FragmentB!!!</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
